# paper-radar

./: README.md  pyproject.toml
.github/workflows/: daily-candidates.yml
config/: ranking.yaml  seed_papers.yaml  sources.yaml  summary_style.yaml  topics.yaml
data/: paper_radar.sqlite  seen_papers.json
paper_radar/: __init__.py  cli.py  config.py  logging_utils.py  models.py
reports/: 2026-06-14.candidates.md  2026-06-15.candidates.md  2026-06-16.candidates.md  2026-06-16.final.md  2026-06-17.candidates.md  2026-06-18.candidates.md  2026-06-19.candidates.md  2026-06-20.candidates.md  2026-06-21.candidates.md  2026-06-22.candidates.md  2026-06-23.candidates.md  2026-06-24.candidates.md  2026-06-25.candidates.md  2026-06-26.candidates.md  2026-06-27.candidates.md  2026-06-28.candidates.md  2026-06-29.candidates.md  2026-06-30.candidates.md  2026-07-01.candidates.md  2026-07-02.candidates.md  2026-07-03.candidates.md  2026-07-04.candidates.md  2026-07-05.candidates.md  2026-07-06.candidates.md  2026-07-07.candidates.md  2026-07-08.candidates.md  2026-07-09.candidates.md  2026-07-10.candidates.md  2026-07-11.candidates.md  2026-07-12.candidates.md  2026-07-13.candidates.md  2026-07-14.candidates.md  2026-07-15.candidates.md  2026-07-16.candidates.md  2026-07-17.candidates.md  2026-07-18.candidates.md  2026-07-19.candidates.md  2026-07-20.candidates.md  2026-07-21.candidates.md  2026-07-22.candidates.md  (+2 more)
tests/: test_config.py  test_dates.py  test_deduplicate.py  test_filter.py  test_quality_workflow.py  test_rank.py  test_report.py  test_sources_config.py
(+73 files in other folders)
